Fix bullets not showing up in Safari and Chrome
Fixes #13

--- a/style/styles.css
+++ b/style/styles.css
@@ -160,7 +160,7 @@ section > h3 {
 	position: absolute;
 	left: 0;
 	background: #333;
-	content: "";
+	content: "\0000a0\0000a0\0000a0";
 }
 
 .meta h3 {
@@ -1060,6 +1060,7 @@ th button[aria-pressed="true"] {
 		}
 		
 		[id="howto"] p + section {
+			-webkit-column-break-inside: avoid;
 			break-inside: avoid;
 		}
 
@@ -1068,13 +1069,16 @@ th button[aria-pressed="true"] {
 
 @media (min-width: 64em) { 
 	
-	[id="howto"] {
-		-webkit-column-count: 3;
-		column-count: 3;
-		
-		-webkit-column-gap: 60px;
-		column-gap: 60px;
-	}
+		@supports (column-span: all) {
+	
+			[id="howto"] {
+				-webkit-column-count: 3;
+				column-count: 3;
+				
+				-webkit-column-gap: 60px;
+				column-gap: 60px;
+			}
+		}
 	
 }
 
